--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,7 +2,6 @@
 
 // bower:scss
 @import "bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
-@import "bower_components/font-awesome/scss/font-awesome.scss";
 // endbower
 
 html, body {
@@ -15,7 +14,7 @@ body {
 
 .wrapper {
   max-width: 800px;
-  height: 100%;
+  // height: 100%;
   margin: 0 auto;
   padding: 0;
   background-color: blue;
