--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,6 +2,7 @@
 
 // bower:scss
 @import "bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
+@import url(https://fonts.googleapis.com/css?family=Alegreya+Sans);
 // endbower
 
 html, body {
@@ -9,11 +10,17 @@ html, body {
 }
 
 body {
+  //font-family: 'Fira Sans', sans-serif;
+  font-family: 'Alegreya Sans', sans-serif;
   margin: 0
 }
 
+h3 {
+  font-weight: 700;
+}
+
 p {
-  font-size: 18px;
+  font-size: 20px;
 }
 
 .content {
@@ -69,6 +76,6 @@ p.title {
 }
 
 span.typed-sentences {
-  font-size: 18px;
+  @extend p;
 }
 
