--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,6 +3,7 @@
 // bower:scss
 @import "bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
 @import url(https://fonts.googleapis.com/css?family=Alegreya+Sans);
+@import url(https://fonts.googleapis.com/css?family=PT+Sans);
 // endbower
 
 html, body {
@@ -17,10 +18,12 @@ body {
 
 h3 {
   font-weight: 700;
+  padding-top: 24px;
 }
 
 p {
   font-size: 20px;
+  font-family: 'PT Sans', sans-serif;
 }
 
 .content {
@@ -59,7 +62,7 @@ p {
     margin: 0 auto;
     padding: 0;
     width: 250px;
-    font-size: 4rem;
+    font-size: 3.2rem;
     list-style: none;
     display: flex;
     flex-direction: row;
