--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -26,36 +26,38 @@ p {
   font-family: 'PT Sans', sans-serif;
 }
 
-.content {
-  height: 60px;
-  width: 100%;
-  //background: yellow; 
-}
-
-.wrapper {
-  height: 100%;
-  //background-color: blue;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display:         flex;
-  -webkit-justify-content: center;
-      -ms-justify-content: center;
-          justify-content: center;
+#wrapper {
+  //height: 100%;
+  background-color: lightblue;
+  // display: -ms-flexbox;
+  // display: -webkit-flex;
+  // display:         flex;
+  // flex-direction: column;
+  // -webkit-justify-content: center;
+  //     -ms-justify-content: center;
+  //         justify-content: center;
  
-  -webkit-align-items: center;
-      -ms-align-items: center;
-          align-items: center;
+  // -webkit-align-items: center;
+  //     -ms-align-items: center;
+  //         align-items: center;
 }
 
-.about {
+#intro {
   //background: tomato;
   text-align: center;
-  display: -ms-flexbox;
   display: -webkit-flex;
+  display:     -ms-flex;
   display:         flex;
 
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
+  align-items: center;
+
+   & .content {
+    height: 60px;
+    width: 100%;
+    //background: yellow; 
+  }
 
   ul {
     margin: 0 auto;
@@ -63,9 +65,30 @@ p {
     width: 250px;
     font-size: 3.2rem;
     list-style: none;
-    display: flex;
+    display: -webkit-flex;
+    display:     -ms-flex;
+    display:         flex;
     flex-direction: row;
     justify-content: space-between;
+  }
+}
+
+#portfolio {
+  background: red;
+  margin-top: 500px;
+  
+  .feature {
+    display: -webkit-flex;
+    display:     -ms-flex;
+    display:         flex;
+    
+    &.left {
+      flex-direction: row;
+    }
+
+    &.right {
+      flex-direction: row-reverse;
+    }
   }
 }
 
