--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -27,31 +27,25 @@ p {
 }
 
 #wrapper {
-  //height: 100%;
+  height: 100%;
   background-color: lightblue;
-  // display: -ms-flexbox;
-  // display: -webkit-flex;
-  // display:         flex;
-  // flex-direction: column;
-  // -webkit-justify-content: center;
-  //     -ms-justify-content: center;
-  //         justify-content: center;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display:         flex;
+  flex-direction: column;
+  -webkit-justify-content: center;
+      -ms-justify-content: center;
+          justify-content: space-around;
  
-  // -webkit-align-items: center;
-  //     -ms-align-items: center;
-  //         align-items: center;
+  -webkit-align-items: center;
+      -ms-align-items: center;
+          align-items: center;
 }
 
 #intro {
   //background: tomato;
   text-align: center;
-  display: -webkit-flex;
-  display:     -ms-flex;
-  display:         flex;
-
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  height: 300px;
 
    & .content {
     height: 60px;
@@ -68,26 +62,62 @@ p {
     display: -webkit-flex;
     display:     -ms-flex;
     display:         flex;
-    flex-direction: row;
     justify-content: space-between;
   }
 }
 
-#portfolio {
-  background: red;
-  margin-top: 500px;
-  
-  .feature {
-    display: -webkit-flex;
-    display:     -ms-flex;
-    display:         flex;
-    
-    &.left {
-      flex-direction: row;
-    }
+#arrow-link {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-    &.right {
-      flex-direction: row-reverse;
+  h5 {
+    margin-bottom: 0px;
+  }
+
+  a {
+    font-size: 2.2em;
+  }
+}
+
+#portfolio {
+  position: absolute;
+  top: 100%;
+  width: 100%;
+  background-color: silver;
+
+  .inner {
+    background: red;
+    margin-top: 20px;
+    max-width: 900px;
+    margin: 0 auto;
+    
+    .feature {
+      background-color: grey;
+      margin: 4em 0; 
+      border: 1px solid black;
+      display: -webkit-flex;
+      display:     -ms-flex;
+      display:         flex;
+
+      .content {
+        width: 100%;
+        padding: 3em;
+      }
+      
+      &.left {
+        flex-direction: row;
+      }
+
+      &.right {
+        flex-direction: row-reverse;
+      }
+
+      @media screen and (max-width: 900px) {
+        &.left, &.right {
+          flex-direction: column;
+        }
+      }
     }
   }
 }
