--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -6,6 +6,10 @@
 @import url(https://fonts.googleapis.com/css?family=PT+Sans);
 // endbower
 
+$primary_color: #555; //color for text, border
+$secondary_color: #ffffff;
+
+
 html, body {
   height: 100%;
 }
@@ -13,22 +17,28 @@ html, body {
 body {
   //font-family: 'Fira Sans', sans-serif;
   font-family: 'Alegreya Sans', sans-serif;
-  margin: 0
+  margin: 0;
+  color: $primary_color;
 }
 
-h3 {
+h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
-  padding-top: 24px;
+  margin: 0 0 1em 0;
+}
+
+h2 {
+  font-size: 2.1em;
 }
 
 p {
-  font-size: 20px;
+  font-size: 1.2em;
   font-family: 'PT Sans', sans-serif;
+  margin: 0 0 2em 0;
 }
 
 #wrapper {
   height: 100%;
-  background-color: lightblue;
+  //background-color: lightblue;
   display: -ms-flexbox;
   display: -webkit-flex;
   display:         flex;
@@ -45,9 +55,21 @@ p {
 #intro {
   //background: tomato;
   text-align: center;
-  height: 300px;
 
-   & .content {
+  & .picture {
+    margin: 0 0 2em 0;
+  }
+  
+  & h3 {
+    margin-bottom: .6em;
+  }
+
+  h4, span {
+    font-size: 1.4em;
+    font-weight: 100;
+  }
+
+  & .intro-content {
     height: 60px;
     width: 100%;
     //background: yellow; 
@@ -67,6 +89,9 @@ p {
 }
 
 #arrow-link {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -93,11 +118,11 @@ p {
     margin: 0 auto;
     
     .feature {
-      background-color: #f1f1f1;
+      background-color: $secondary_color;
       margin: 4em 0; 
       padding-left: 24px;
       padding-right: 24px;
-      border: 1px solid black;
+      //border: 1px solid black;
       // display: -webkit-flex;
       // display:     -ms-flex;
       // display:         flex;
@@ -105,7 +130,8 @@ p {
       .image-wrapper {
         margin: 10px auto;
         padding: 5px;
-        border: 1px solid black;
+        border: 1px solid $primary_color;
+        border-radius: 5px;
 
         @media screen and (min-width: 768px) {
           &.pull-right-img {
@@ -114,24 +140,14 @@ p {
         }
       }
 
-      .content {
+      .portfolio-content {
         //width: 100%;
         padding: 3em;
+
+        @media screen and (max-width: 769px) {
+          clear: right;
+        }
       }
-      
-      // &.left {
-      //   flex-direction: row;
-      // }
-
-      // &.right {
-      //   flex-direction: row-reverse;
-      // }
-
-      // @media screen and (max-width: 900px) {
-      //   &.left, &.right {
-      //     flex-direction: column;
-      //   }
-      // }
     }
   }
 }
@@ -140,11 +156,11 @@ p {
   max-width: 150px;
 }
 
-p.title {
+h4.title {
   display: none;
 }
 
-span#typed-sentences {
-  @extend p;
-}
+// span#typed-sentences {
+//   @extend p;
+// }
 
