--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -109,26 +109,22 @@ p {
   position: absolute;
   top: 100%;
   width: 100%;
-  background-color: #eee;
+  background-color: $secondary_color;
 
   .inner {
     //background: red;
     margin-top: 20px;
-    max-width: 900px;
+    max-width: 1100px;
     margin: 0 auto 5em;
     
     .feature {
-      background-color: $secondary_color;
+      background-color: darken($secondary_color, 2.8);
       margin: 4em 0; 
       padding: 1em 2.2em;
       //border: 1px solid black;
       // display: -webkit-flex;
       // display:     -ms-flex;
       // display:         flex;
-
-      @media screen and (max-width: 769px) {
-        margin: 5em 3em 3em 3em;
-      }
       
       .image-wrapper {
         margin: 10px auto;
@@ -150,6 +146,7 @@ p {
 
         @media screen and (max-width: 769px) {
           clear: right;
+          padding: 2em;
         }
       }
     }
