--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -31,7 +31,7 @@ h2 {
 }
 
 p {
-  font-size: 1.2em;
+  font-size: 1.1em;
   font-family: 'PT Sans', sans-serif;
   margin: 0 0 1.2em 0;
 }
@@ -116,39 +116,38 @@ p {
     margin-top: 20px;
     max-width: 1100px;
     margin: 0 auto 5em;
-    
-    .feature {
-      background-color: darken($secondary_color, 2.8);
-      margin: 4em 0; 
-      padding: 1em 2.2em;
-      //border: 1px solid black;
-      // display: -webkit-flex;
-      // display:     -ms-flex;
-      // display:         flex;
-      
-      .image-wrapper {
-        margin: 10px auto;
-        padding: 0px;
-        //border: 12px solid lighten($primary_color, 52%);
-        border-radius: 5px;
+  }
+}
 
-    
-        @media screen and (min-width: 768px) {
-          &.pull-right-img {
-            float: right;
-          }
-        }
+.feature {
+  background-color: darken($secondary_color, 2.8);
+  margin: 4em 0; 
+  padding: 1em 2.2em;
+  
+  .image-wrapper {
+    margin: 10px auto;
+    padding: 0px;
+    //border: 12px solid lighten($primary_color, 52%);
+    border-radius: 5px;
+
+
+    @media screen and (min-width: 768px) {
+      &.pull-right-img {
+        float: right;
       }
+    }
+  }
 
-      .portfolio-content {
-        //width: 100%;
-        padding: 3em;
+  .portfolio-content {
+    padding: 3em;
 
-        @media screen and (max-width: 769px) {
-          clear: right;
-          padding: 2em;
-        }
-      }
+    @media screen and (max-width: 769px) {
+      clear: right;
+      padding: 2em;
+    }
+
+    p:last-of-type {
+      margin-bottom: 0.5em;
     }
   }
 }
