--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -45,11 +45,12 @@ p {
   flex-direction: column;
   -webkit-justify-content: center;
       -ms-justify-content: center;
-          justify-content: space-around;
+          justify-content: center;
  
-  -webkit-align-items: center;
-      -ms-align-items: center;
-          align-items: center;
+  // -webkit-align-items: center;
+  //     -ms-align-items: center;
+  //    -moz-align-items: center;
+  //         align-items: center;
 }
 
 #intro {
@@ -102,6 +103,7 @@ p {
 
   a {
     font-size: 2.2em;
+    padding: 0.1em 1em;
   }
 }
 
@@ -112,8 +114,6 @@ p {
   background-color: $secondary_color;
 
   .inner {
-    //background: red;
-    margin-top: 20px;
     max-width: 1100px;
     margin: 0 auto 5em;
   }
@@ -123,15 +123,23 @@ p {
   background-color: darken($secondary_color, 2.8);
   margin: 4em 0; 
   padding: 1em 2.2em;
+
+  @media screen and (max-width: 768px) {
+    & {
+      margin-top: 1em;
+    }
+  }
   
   .image-wrapper {
     margin: 10px auto;
-    padding: 0px;
+    padding: 0;
     //border: 12px solid lighten($primary_color, 52%);
     border-radius: 5px;
 
 
     @media screen and (min-width: 768px) {
+      padding: 1em;
+
       &.pull-right-img {
         float: right;
       }
@@ -214,7 +222,9 @@ p {
     font-size: 2em;
     margin-right: .1em;
   }
+}
 
+.dev-icons-carosabikes {
   svg {
     margin-right: .6em;
   }
