--- a/src/main.scss
+++ b/src/main.scss
@@ -1,10 +1,3 @@
-//$icon-font-path: '../fonts/';
-
-// bower:scss
-@import "bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
-@import url(https://fonts.googleapis.com/css?family=Alegreya+Sans);
-@import url(https://fonts.googleapis.com/css?family=PT+Sans);
-// endbower
 
 $primary_color: #555; //color for text, border
 $secondary_color: #ffffff;
@@ -12,6 +5,7 @@ $secondary_color: #ffffff;
 
 html, body {
   height: 100%;
+  font-size: 14px;
 }
 
 body {
@@ -55,7 +49,7 @@ p {
   & .picture {
     margin: 0 0 2em 0;
   }
-  
+
   & h3 {
     margin-bottom: .6em;
   }
@@ -74,7 +68,7 @@ p {
     margin: 0 auto;
     padding: 0;
     width: 250px;
-    font-size: 3.2rem;
+    font-size: 2.2rem;
     list-style: none;
     display: -webkit-flex;
     display:     -ms-flex;
@@ -119,7 +113,7 @@ p {
 
 .feature {
   background-color: darken($secondary_color, 2.8);
-  margin: 4em 0; 
+  margin: 4em 0;
   padding: 1em 2.2em;
 
   @media screen and (max-width: 768px) {
@@ -127,7 +121,7 @@ p {
       margin-top: 1em;
     }
   }
-  
+
   .image-wrapper {
     margin: 10px auto;
     padding: 0;
@@ -175,7 +169,7 @@ p {
 .browser-icons {
   position: relative;
 
-  &, 
+  &,
   &:before,
   &:after  {
     width: 10px;
@@ -214,7 +208,7 @@ p {
     //margin-right: 0;
     max-width: 2em;
   }
-  
+
   i {
     font-size: 2em;
     margin-right: .1em;
@@ -230,14 +224,23 @@ p {
 .actions {
   a {
     margin: 10px 8px 0 0;
-  }  
+  }
 }
 
 .img-profile {
   max-width: 150px;
 }
 
-h4.title {
+.title {
   display: none;
+  opacity: 0;
+  transition: opacity 2s;
 }
 
+.fade-in {
+  opacity: 1;
+}
+
+.fade-out {
+  opacity: 0;
+}
