--- a/src/main.scss
+++ b/src/main.scss
@@ -59,6 +59,24 @@ a {
   border-radius: 50%;
 }
 
+.btn {
+  display: inline-block;
+  text-align: center;
+  vertical-align: middle;
+  cursor: pointer;
+  border: 1px solid transparent;
+  white-space: nowrap;
+  padding: 6px 12px;
+  line-height: 1.428571429;
+  border-radius: 4px;
+}
+
+.btn__default {
+  color: #333;
+  background-color: #fff;
+  border-color: #ccc;
+}
+
 @-webkit-keyframes hvr-wobble-vertical {
   16.65% {
     -webkit-transform: translateY(8px);
