--- a/src/main.scss
+++ b/src/main.scss
@@ -77,6 +77,21 @@ a {
   border-color: #ccc;
 }
 
+.float-right-img {
+  float: right;
+  margin-left: 1rem;
+}
+
+.float-left-img {
+  float: left;
+  margin-right: 1rem;
+}
+
+.img-responsive {
+  width: 100%;
+  height: auto;
+}
+
 @-webkit-keyframes hvr-wobble-vertical {
   16.65% {
     -webkit-transform: translateY(8px);
