--- a/src/page-index/page-index.scss
+++ b/src/page-index/page-index.scss
@@ -38,7 +38,7 @@
   ul {
     margin: 0 auto;
     padding: 0;
-    width: 250px;
+    width: 220px;
     font-size: 2.2rem;
     list-style: none;
     display: -webkit-flex;
@@ -70,141 +70,11 @@
   }
 }
 
-#portfolio {
-  position: absolute;
-  top: 100%;
-  width: 100%;
-  background-color: $secondary_color;
-
-  .inner {
-    max-width: 1100px;
-    margin: 0 auto 5em;
-  }
-}
-
-.feature {
-  background-color: darken($secondary_color, 2.8);
-  margin: 4em 0;
-  padding: 1em 2.2em;
-  display: flex;
-  flex-direction: row;
-
-  @media screen and (max-width: 768px) {
-    & {
-      margin-top: 1em;
-      flex-direction: column;
-    }
-  }
-
-  .image-wrapper {
-    margin: 1rem 0;
-    padding: 0;
-    border-radius: 5px;
-    width: 50%;
-
-    @media screen and (max-width: 768px) {
-      margin: .8rem auto 0 auto;
-      width: 100%;
-    }
-
-    @media screen and (min-width: 769px) {
-      padding: 1em;
-    }
-  }
-
-  .image-wrapper__right {
-    order: 2;
-
-    @media screen and (max-width: 768px) {
-      order: 1;
-    }
-  }
-
-  .portfolio-content {
-    padding: 3em;
-    width: 50%;
-
-    @media screen and (max-width: 768px) {
-      margin: 0 auto;
-      padding: 2rem 0;
-      width: 100%;
-      order: 2;
-    }
-
-    p:last-of-type {
-      margin-bottom: 0.5em;
-    }
-  }
-}
-
-.browser {
-  border: 1px solid rgba($primary_color, .15);
-  border-radius: 5px;
-  overflow: hidden;
-  box-shadow: 5px 5px 0 5px rgba($primary_color, .03);
-  //transform: translate(-50%);
-}
-
-.browser-toolbar {
-  position: relative;
-  border-bottom: 1px solid rgba($primary_color, .15);
-  padding: 8px;
-  background: darken($secondary_color, 10);
-}
-
-.browser-icons {
-  position: relative;
-
-  &,
-  &:before,
-  &:after  {
-    width: 10px;
-    height: 10px;
-    border-radius: 10em;
-    display: block;
-  }
-
-  & {
-    background: tomato;
-  }
-
-  &:before,
-  &:after  {
-    content: '';
-    position: absolute;
-    top: 0;
-  }
-
-  &:after {
-    background: lightgreen;
-    left: 30px;
-  }
-
-  &:before {
-    background: gold;
-    left: 15px;
-  }
-}
-
-
-.dev-icons {
-  margin-bottom: 1em;
-
-  .devicon {
-    //margin-right: 0;
-    max-width: 2em;
-  }
-
-  i {
-    font-size: 2em;
-    margin-right: .1em;
-  }
-}
-
-.dev-icons-carosabikes {
-  svg {
-    margin-right: .6em;
-  }
+#logo {
+  margin-top: -17px;
+  margin-left: -5px;
+  width: 32px;
+  height: 32px;
 }
 
 .actions {
@@ -220,6 +90,8 @@
 
 .title {
   display: none;
+  justify-content: center;
+  margin-left: 20px;
   opacity: 0;
   transition: opacity 2s;
 }
